--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ body {
   line-height: 1.8;
   color: rgba(0, 0, 0, 0.7);
   background-color: #ffffff;
+  text-align: justify;
+  hyphens: auto;
+  -webkit-hyphens: auto;
+  word-break: break-all; /* 允许长单词断行 */
+  overflow-wrap: break-word; /* 兼容写法 */
 }
 @media screen and (max-width: 992px) {
   body {
@@ -37,6 +42,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Playfair Display", Georgia, serif;
   font-style: normal;
   font-weight: 400;
+  line-height: 1.5;
   margin: 0 0 30px 0; }
 figure {
   margin-bottom: 2.5em;
@@ -45,14 +51,14 @@ figure {
 figure figcaption {
   font-size: 16px;
   width: 80%;
-  margin: 20px auto 0px auto;
+  margin: 20px auto 0 auto;
   color: #b3b3b3;
   font-style: italic;
   font-family: "Quicksand", Arial, sans-serif; }
 @media screen and (max-width: 480px) {
   figure figcaption {
     width: 100%; } }
-::-webkit-selection {
+::selection {
   color: #fff;
   background: #2c98f0; }
 ::-moz-selection {
@@ -299,10 +305,10 @@ figure figcaption {
 #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
   margin: 0;
   padding: 0;
-  text-align: right;
   color: black;
   font-family: "Playfair Display", Georgia, serif; }
 #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
+  text-align: right;
   margin-bottom: 20px;
   font-size: 60px;
   line-height: 1.3;
@@ -313,7 +319,7 @@ figure figcaption {
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 30px;
-  font-weight: 350;
+  font-weight: 400;
   font-family: "Quicksand", Arial, sans-serif; }
 #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 a {
   color: rgba(44, 152, 240, 0.8);
@@ -863,7 +869,7 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
 .blog-entry .desc h3 {
   font-size: 16px;
   margin-bottom: 25px;
-  line-height: auto;
+  line-height: 1.5;
   font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -980,7 +986,7 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     opacity: 1;
     background: rgba(0, 0, 0, 0.4); }
   .project .desc h3 {
-    font-style: 28px;
+    font-style: normal ;
     -webkit-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     color: #000; }
