--- a/css/style.css
+++ b/css/style.css
@@ -230,7 +230,8 @@ figure figcaption {
 @media screen and (max-width: 768px) {
   #colorlib-main {
     width: 100%;
-    padding: 0 1em; } }
+    padding: 0 1em; }
+}
 .js-fullheight{
   height: 100vh;
 }
@@ -289,18 +290,19 @@ figure figcaption {
   opacity: 0;
   min-height: 500px;
   vertical-align: middle;
-  padding-top: 600px;
-  padding-right: 100px;
+  padding-top: 70%;
   z-index: 9; }
 #colorlib-hero .flexslider .slider-text > .slider-text-inner {
   display: table-cell;
   vertical-align: middle;
   min-height: 700px;
-  padding: 0em;
+  padding: 0;
   position: relative;
 }
 @media screen and (max-width: 768px) {
-  #colorlib-hero .flexslider .slider-text > .slider-text-inner { text-align: center;}
+  #colorlib-hero .flexslider .slider-text > .slider-text-inner {
+    text-align: center;
+  }
 }
 #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
   margin: 0;
@@ -329,7 +331,7 @@ figure figcaption {
 @media screen and (max-width: 768px) {
   #colorlib-hero .flexslider .slider-text > .slider-text-inner .heading-section {
     font-size: 30px; } }
-#colorlib-hero .flexslider .slider-text > .slider-text-inner s
+
 .colorlib-lead {
   font-size: 20px;
   color: #fff; }
