--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,122 @@ body {
   word-break: break-all; /* 允许长单词断行 */
   overflow-wrap: break-word; /* 兼容写法 */
 }
-@media screen and (max-width: 992px) {
-  body {
-    font-size: 16px; } }
+@media screen and (max-width: 1200px){
+  .colorlib-feature.colorlib-icon i {
+    font-size: 40px; }
+  .colorlib-feature.colorlib-feature-sm .colorlib-icon i {
+    font-size: 28px; }
+}
+@media screen and (max-width: 992px){
+  body { font-size: 16px; }
+}
+
+@media screen and (max-width: 768px) {
+  #colorlib-aside {
+    width: 300px;
+    -moz-transform: translateX(-300px);
+    -webkit-transform: translateX(-300px);
+    -ms-transform: translateX(-300px);
+    -o-transform: translateX(-300px);
+    transform: translateX(-300px);
+    padding-top: 4em; } }
+@media screen and (max-width: 768px) {
+  #colorlib-aside #colorlib-main-menu ul {
+    margin: 0 0 2em 0; } }
+@media screen and (max-width: 768px) {
+  #colorlib-aside .colorlib-footer {
+    position: relative;
+    bottom: 0; } }
+@media screen and (max-width: 768px) {
+  #colorlib-main {
+    width: 100%;
+    padding: 0 1em; }
+}
+@media screen and (max-width: 768px) {
+  #colorlib-hero .flexslider .flex-control-nav {
+    right: 20px;
+    top: 100px;
+  }
+}
+@media screen and (max-width: 768px) {
+  #colorlib-hero .flexslider .slider-text > .slider-text-inner {
+    text-align: center;
+  }
+}
+@media screen and (max-width: 768px) {  #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
+  font-size: 28px; } }
+@media screen and (max-width: 768px) {
+  #colorlib-hero .flexslider .slider-text > .slider-text-inner .heading-section {
+    font-size: 30px; } }
+@media screen and (max-width: 768px) {
+  #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
+    width: 100%; } }
+@media screen and (max-width: 768px) {
+  .colorlib-narrow-content {
+    padding: 0; } }
+@media screen and (max-width: 768px) {
+  .services {
+    margin-bottom: 4em; } }
+@media screen and (max-width: 768px) {
+  .project .desc {
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.4); }
+  .project .desc h3 {
+    font-style: normal ;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    color: #000; }
+  .project .desc span {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0); } }
+@media screen and (max-width: 768px) {
+  .colorlib-experience,
+  .colorlib-skills,
+  .colorlib-education,
+  .colorlib-blog,
+  .colorlib-work,
+  .colorlib-about,
+  .colorlib-services,
+  .colorlib-contact {
+    padding-top: 5em;
+    padding-bottom: 8em; } }
+@media screen and (max-width: 768px) {
+  .colorlib-heading {
+    margin-bottom: 3em; } }
+@media screen and (max-width: 768px) {
+  .colorlib-social li a {
+    padding: 10px 8px; } }
+@media screen and (max-width: 768px) {
+  #map {
+    height: 200px; } }
+@media screen and (max-width: 768px) {
+  .blog-entry {
+    margin-bottom: 3em; } }
+@media screen and (max-width: 768px) {
+  .colorlib-nav-toggle {
+    opacity: 1;
+    visibility: visible; } }
+
+@media screen and (max-width: 768px) {
+  .row-bottom-padded-lg {
+    padding-bottom: 1em; } }
+@media screen and (max-width: 768px) {
+  .row-bottom-padded-md {
+    padding-bottom: 1em; } }
+@media screen and (max-width: 768px) {
+  .row-bottom-padded-sm {
+    padding-bottom: 1em; } }
+@media screen and (max-width: 768px) {
+  .pagination li a {
+    padding: 7px 15px; } }
+
+@media screen and (max-width: 480px) {
+  figure figcaption { width: 100%; }
+  .col-xxs-12 {
+    float: none;
+    width: 100%; }
+}
+
 a {
   color: #2c98f0;
   -webkit-transition: 0.5s;
@@ -55,9 +168,6 @@ figure figcaption {
   color: #b3b3b3;
   font-style: italic;
   font-family: "Quicksand", Arial, sans-serif; }
-@media screen and (max-width: 480px) {
-  figure figcaption {
-    width: 100%; } }
 ::selection {
   color: #fff;
   background: #2c98f0; }
@@ -85,15 +195,6 @@ figure figcaption {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
-@media screen and (max-width: 768px) {
-  #colorlib-aside {
-    width: 300px;
-    -moz-transform: translateX(-300px);
-    -webkit-transform: translateX(-300px);
-    -ms-transform: translateX(-300px);
-    -o-transform: translateX(-300px);
-    transform: translateX(-300px);
-    padding-top: 4em; } }
 #colorlib-aside .author-img {
   width: 150px;
   height: 150px;
@@ -129,9 +230,6 @@ figure figcaption {
   text-align: center;
   margin: 0;
   padding: 0; }
-@media screen and (max-width: 768px) {
-  #colorlib-aside #colorlib-main-menu ul {
-    margin: 0 0 2em 0; } }
 #colorlib-aside #colorlib-main-menu ul li {
   margin: 0 0 10px 0;
   padding: 0;
@@ -195,10 +293,6 @@ figure figcaption {
   color: rgba(0, 0, 0, 0.5);
   padding: 0 20px;
   width: 100%; }
-@media screen and (max-width: 768px) {
-  #colorlib-aside .colorlib-footer {
-    position: relative;
-    bottom: 0; } }
 #colorlib-aside .colorlib-footer span {
   display: block; }
 #colorlib-aside .colorlib-footer ul {
@@ -226,11 +320,6 @@ figure figcaption {
   -o-transition: 0.5s;
   transition: 0.5s;
   background-color: #ffffff;
-}
-@media screen and (max-width: 768px) {
-  #colorlib-main {
-    width: 100%;
-    padding: 0 1em; }
 }
 .js-fullheight{
   height: 100vh;
@@ -263,12 +352,6 @@ figure figcaption {
   left: 20px;
   float: left;
   width: auto; }
-@media screen and (max-width: 768px) {
-  #colorlib-hero .flexslider .flex-control-nav {
-    right: 20px;
-    top: 100px;
-  }
-}
 #colorlib-hero .flexslider .flex-control-nav li {
   display: block;
   margin-bottom: 10px; }
@@ -299,11 +382,6 @@ figure figcaption {
   padding: 0;
   position: relative;
 }
-@media screen and (max-width: 768px) {
-  #colorlib-hero .flexslider .slider-text > .slider-text-inner {
-    text-align: center;
-  }
-}
 #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
   margin: 0;
   padding: 0;
@@ -315,8 +393,6 @@ figure figcaption {
   font-size: 60px;
   line-height: 1.3;
   font-weight: 700; }
-@media screen and (max-width: 768px) {  #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
-    font-size: 28px; } }
 #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
   font-size: 18px;
   line-height: 1.5;
@@ -328,10 +404,6 @@ figure figcaption {
   border-bottom: 1px solid rgba(44, 152, 240, 0.7); }
 #colorlib-hero .flexslider .slider-text > .slider-text-inner .heading-section {
   font-size: 50px; }
-@media screen and (max-width: 768px) {
-  #colorlib-hero .flexslider .slider-text > .slider-text-inner .heading-section {
-    font-size: 30px; } }
-
 .colorlib-lead {
   font-size: 20px;
   color: #fff; }
@@ -353,9 +425,6 @@ figure figcaption {
 #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
   background: rgba(230, 230, 230, 0.3) !important;
   border: 1px solid #000 !important; }
-@media screen and (max-width: 768px) {
-  #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
-    width: 100%; } }
 body.offcanvas {
   overflow-x: hidden; }
 body.offcanvas #colorlib-aside {
@@ -377,9 +446,6 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   transform: translateX(300px); }
 .colorlib-narrow-content {
   padding: 0 2.5em; }
-@media screen and (max-width: 768px) {
-  .colorlib-narrow-content {
-    padding: 0; } }
 .no-gutters {
   margin: 0;
   padding: 0; }
@@ -396,17 +462,6 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   clear: both;
   width: 100%;
   display: block; }
-@media screen and (max-width: 768px) {
-  .colorlib-experience,
-  .colorlib-skills,
-  .colorlib-education,
-  .colorlib-blog,
-  .colorlib-work,
-  .colorlib-about,
-  .colorlib-services,
-  .colorlib-contact {
-    padding-top: 5em;
-    padding-bottom: 8em; } }
 .author-img {
   background-size: cover;
   background-position: center center;
@@ -423,9 +478,6 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   position: relative; }
 .colorlib-heading span {
   display: block; }
-@media screen and (max-width: 768px) {
-  .colorlib-heading {
-    margin-bottom: 3em; } }
 .heading-meta {
   margin-bottom: 15px;
   display: block;
@@ -642,9 +694,7 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   margin-bottom: 80px;
   position: relative;
   z-index: 0; }
-@media screen and (max-width: 768px) {
-  .services {
-    margin-bottom: 4em; } }
+
 .services .icon {
   position: absolute;
   top: -20px;
@@ -818,9 +868,6 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   color: #2c98f0;
   font-size: 60px;
   height: 100px; }
-@media screen and (max-width: 1200px) {
-  .colorlib-feature .colorlib-icon i {
-    font-size: 40px; } }
 .colorlib-feature .colorlib-text {
   padding-left: 120px;
   width: 100%; }
@@ -839,17 +886,11 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
 .colorlib-feature.colorlib-feature-sm .colorlib-icon i {
   color: #2c98f0;
   font-size: 40px; }
-@media screen and (max-width: 1200px) {
-  .colorlib-feature.colorlib-feature-sm .colorlib-icon i {
-    font-size: 28px; } }
 .blog-entry {
   width: 100%;
   float: left;
   background: #fff;
   margin-bottom: 3em; }
-@media screen and (max-width: 768px) {
-  .blog-entry {
-    margin-bottom: 3em; } }
 .blog-entry .blog-img {
   width: 100%;
   float: left;
@@ -983,18 +1024,6 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   transform: translate3d(0, 15px, 0); }
 .project .desc span a {
   color: #000; }
-@media screen and (max-width: 768px) {
-  .project .desc {
-    opacity: 1;
-    background: rgba(0, 0, 0, 0.4); }
-  .project .desc h3 {
-    font-style: normal ;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    color: #000; }
-  .project .desc span {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0); } }
 .project:hover .desc {
   opacity: 1; }
 .project:hover .desc h3 {
@@ -1081,9 +1110,6 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   -moz-border-radius: 7px;
   -ms-border-radius: 7px;
   border-radius: 7px; }
-@media screen and (max-width: 768px) {
-  .colorlib-social li a {
-    padding: 10px 8px; } }
 .colorlib-social li a:hover {
   color: #2c98f0; }
 .colorlib-social li a:hover, .colorlib-social li a:active, .colorlib-social li a:focus {
@@ -1093,9 +1119,6 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
 #map {
   width: 100%;
   height: 700px; }
-@media screen and (max-width: 768px) {
-  #map {
-    height: 200px; } }
 .colorlib-bg-color {
   background: #fafafa;
   position: relative; }
@@ -1121,9 +1144,6 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   background: #2c98f0;
   color: #fff;
   border: 1px solid #2c98f0; }
-@media screen and (max-width: 768px) {
-  .pagination li a {
-    padding: 7px 15px; } }
 .pagination li.active a {
   background: #2c98f0;
   border: 1px solid #2c98f0 !important; }
@@ -1349,29 +1369,12 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
-@media screen and (max-width: 768px) {
-  .colorlib-nav-toggle {
-    opacity: 1;
-    visibility: visible; } }
-@media screen and (max-width: 480px) {
-  .col-xxs-12 {
-    float: none;
-    width: 100%; } }
 .row-bottom-padded-lg {
   padding-bottom: 7em; }
-@media screen and (max-width: 768px) {
-  .row-bottom-padded-lg {
-    padding-bottom: 1em; } }
 .row-bottom-padded-md {
   padding-bottom: 3em; }
-@media screen and (max-width: 768px) {
-  .row-bottom-padded-md {
-    padding-bottom: 1em; } }
 .row-bottom-padded-sm {
   padding-bottom: 1em; }
-@media screen and (max-width: 768px) {
-  .row-bottom-padded-sm {
-    padding-bottom: 1em; } }
 .row-pt-md {
   padding-top: 3em; }
 .col-padding {
