--- a/css/style.css
+++ b/css/style.css
@@ -481,7 +481,7 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
   box-shadow: none !important;
   border: none; }
 .panel-heading a:after {
-  font-family: "icomoon";
+  font-family: "icomoon", serif;
   content: "\e115";
   position: absolute;
   right: 20px;
