--- a/css/styleN.css
+++ b/css/styleN.css
@@ -342,8 +342,8 @@ figure figcaption {
     display: table;
     opacity: 0;
     min-height: 500px;
-    vertical-align: middle;
-    padding-top: 70%;
+    vertical-align: bottom;
+    padding-top: 60%;
     padding-bottom: 10%;
     z-index: 9;
 }
@@ -1801,7 +1801,12 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
 
 /* 适配大尺寸 iPad 横屏（如 Pro 12.9英寸） */
 @media screen and (max-width: 1366px) and (orientation: landscape) {
+    #colorlib-hero {
+        background: url(../images/banner.jpg) no-repeat 30% 20%;
+        background-size: cover;
+    }
     #colorlib-hero .flexslider .slider-text {
+        padding-top: 40%;
         padding-bottom: 10%;
     }
     #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
@@ -1862,7 +1867,10 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
     #colorlib-main {
         width: 100%;
     }
-
+    #colorlib-hero {
+        background: url(../images/banner.jpg) no-repeat 30% 20%;
+        background-size: cover;
+    }
     #colorlib-hero .flexslider .flex-control-nav {
         right: 20px;
         top: 100px;
@@ -1873,7 +1881,8 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
         display: table;
         opacity: 0;
         min-height: 500px;
-        vertical-align: middle;
+        vertical-align: bottom;
+        padding-top: 70%;
         padding-bottom: 10%;
         z-index: 9;
         float: right;
@@ -1985,22 +1994,74 @@ body.offcanvas #colorlib-main, body.offcanvas .colorlib-nav-toggle {
 }
 /* 适配 iPhone 横屏（大部分型号） */
 @media screen and (max-width: 852px) and (orientation: landscape) {
-
-}
-/* 适配大屏 iPhone 竖屏（如 6.7英寸 Plus/Pro Max） */
-@media screen and (max-width: 430px) {
-    figure figcaption {
-        width: 100%;
+    #colorlib-hero {
+        background: url(../images/banner.jpg) no-repeat 30% 20%;
+        background-size: cover;
     }
     #colorlib-hero .flexslider .slider-text {
         display: table;
         opacity: 0;
         max-height: 500px;
         max-width: 90%;
-        vertical-align: middle;
-        padding-top: 70%;
-        padding-left: 50%;
+        vertical-align: bottom;
+        padding-top: 20%;
+        padding-bottom: 60%;
         z-index: 9;
+    }
+}
+/* 适配大屏 iPhone 竖屏（如 6.7英寸 Plus/Pro Max） */
+@media screen and (max-width: 430px) {
+    figure figcaption {
+        width: 100%;
+    }
+    #colorlib-hero {
+        background: url(../images/banner.jpg) no-repeat 30% 20%;
+        background-size: cover;
+    }
+    #colorlib-hero .flexslider .slider-text {
+        display: table;
+        opacity: 0;
+        max-height: 500px;
+        max-width: 90%;
+        vertical-align: bottom;
+        padding-top: 80%;
+        padding-bottom: 10%;
+        z-index: 9;
+    }
+    #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
+        font-size: 24px;
+    }
+    #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
+        font-size: 14px;
+    }
+    #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn{
+        font-size: 6px;
+    }
+    .colorlib-experience,
+    .colorlib-skills,
+    .colorlib-education,
+    .colorlib-blog,
+    .colorlib-work,
+    .colorlib-about,
+    .colorlib-services,
+    .colorlib-contact {
+        padding-top: 2em;
+        padding-bottom: 4em;
+        padding-left: 1em;
+        padding-right: 2em;
+        font-size: 14px;
+    }
+    .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h2 {
+        font-size: 18px;
+    }
+    .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label h4 {
+        font-size: 14px;
+    }
+    .panel-heading a {
+        font-size: 14px;
+    }
+    .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
+        font-size: 14px;
     }
 }
 /* 适配大部分 iPhone 竖屏（如 6.1英寸基础款） */
